gitops/manifests/miniflux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  annotations:
    cert-manager.io/cluster-issuer: step-ca
spec:
  ingressClassName: traefik
  rules:
    - host: miniflux.home.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miniflux
                port:
                  number: 8080
  tls:
    - hosts: [miniflux.home.lab]
      secretName: miniflux-tls
